--- a/fbi_crime_data/fetching_ca_agency_data.ipynb
+++ b/fbi_crime_data/fetching_ca_agency_data.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,8 @@
     "\n",
     "employees = [get_employees_by_ori(i, api_key['fbikey']) for i in oris]\n",
     "employees = pd.concat(employees)\n",
-    "employees.to_csv(\"../ca_employees_2020.csv\", index=False)   "
+    "employees.to_csv(\"../fbi_crime_data/CA/ca_employees_2020.csv\", \n",
+    "                 index=False)   "
    ]
   },
   {
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +153,28 @@
     "\n",
     "arrests = [get_arrests_by_ori(i, api_key['fbikey']) for i in oris]\n",
     "arrests = pd.concat(arrests)\n",
-    "arrests.to_csv(\"../ca_arrests_2020.csv\", index=False)   "
+    "arrests.to_csv(\"../fbi_crime_data/CA/ca_arrests_2020.csv\", \n",
+    "               index=False)   "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get arrests for the state of California:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ca_arrests = requests.get(f\"https://api.usa.gov/crime/fbi/cde/arrest/state/CA/all?from=2020&to=2020&API_KEY={api_key['fbikey']}\").json()\n",
+    "ca_arrests_df = DataFrame.from_dict(ca_arrests['data'])\n",
+    "ca_arrests_df.to_csv(\"../fbi_crime_data/CA/ca_state_arrests_2020.csv\", \n",
+    "                 index=False)   "
    ]
   }
  ],
