--- a/fbi_crime_data/fetching_state.ipynb
+++ b/fbi_crime_data/fetching_state.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,24 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AS query is problematic\n",
-      "GU query is problematic\n",
-      "MP query is problematic\n",
-      "TT query is problematic\n",
-      "VI query is problematic\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# https://www.faa.gov/air_traffic/publications/atpubs/cnt_html/appendix_a.html\n",
-    "states = ['AK', 'AK', 'AZ', 'AR', 'AS', 'CA', 'CO', 'CT', 'DE', 'DC', 'FL', 'GA',\n",
+    "states = ['AL', 'AK', 'AZ', 'AR', 'AS', 'CA', 'CO', 'CT', 'DE', 'DC', 'FL', 'GA',\n",
     "          'GU', 'HI', 'ID', 'IL', 'IN', 'IA', 'KS', 'KY', 'LA', 'ME', 'MD', 'MA',\n",
     "          'MI', 'MN', 'MS', 'MO', 'MT', 'NE', 'NV', 'NH', 'NJ', 'NM', 'NY', 'NC',\n",
     "          'ND', 'MP', 'OH', 'OK', 'OR', 'PA', 'PR', 'RI', 'SC', 'SD', 'TN', 'TX',\n",
@@ -89,8 +77,7 @@
     "    res = requests.get(query)\n",
     "    if res.status_code == 200:\n",
     "        try: \n",
-    "            out = pl.from_dict(res.json()[0])\n",
-    "            return out\n",
+    "            return res.json()\n",
     "        except:\n",
     "            print(f\"{state} query is problematic\")\n",
     "        \n",
@@ -99,29 +86,25 @@
     "            print(f\"No record found for: {state}\")\n",
     "        pass  \n",
     "\n",
-    "state_estimates = [get_state_estimates(state = i, key = api_key['fbikey']) for i in states]\n"
+    "state_estimates = [DataFrame.from_dict(j) for j in [get_state_estimates(state = i, key = api_key['fbikey']) for i in states] if j]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save it all as a CSV:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ShapeError",
-     "evalue": "unable to vstack, dtypes for column \"arson\" don't match: `str` and `f32`",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mShapeError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[57], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m pl\u001b[39m.\u001b[39;49mconcat([x \u001b[39mfor\u001b[39;49;00m x \u001b[39min\u001b[39;49;00m state_estimates \u001b[39mif\u001b[39;49;00m x \u001b[39mis\u001b[39;49;00m \u001b[39mnot\u001b[39;49;00m \u001b[39mNone\u001b[39;49;00m], how\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mdiagonal\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "File \u001b[1;32mc:\\Users\\CCallaghan\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\polars\\functions\\eager.py:233\u001b[0m, in \u001b[0;36mconcat\u001b[1;34m(items, how, rechunk, parallel)\u001b[0m\n\u001b[0;32m    231\u001b[0m     out \u001b[39m=\u001b[39m wrap_df(plr\u001b[39m.\u001b[39mconcat_df(elems))\n\u001b[0;32m    232\u001b[0m \u001b[39melif\u001b[39;00m how \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mdiagonal\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m--> 233\u001b[0m     out \u001b[39m=\u001b[39m wrap_df(plr\u001b[39m.\u001b[39;49mdiag_concat_df(elems))\n\u001b[0;32m    234\u001b[0m \u001b[39melif\u001b[39;00m how \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhorizontal\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m    235\u001b[0m     out \u001b[39m=\u001b[39m wrap_df(plr\u001b[39m.\u001b[39mhor_concat_df(elems))\n",
-      "\u001b[1;31mShapeError\u001b[0m: unable to vstack, dtypes for column \"arson\" don't match: `str` and `f32`"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pl.concat([x for x in state_estimates if x is not None], how=\"diagonal\")\n"
+    "pd.concat(state_estimates).to_csv('../fbi_crime_data/states/states_estimates_2020.csv',\n",
+    "                                  index=False)  "
    ]
   }
  ],
