push overview of cities and PD crime data portals table.

--- a/pd-city-data.ipynb
+++ b/pd-city-data.ipynb
@@ -14,8 +14,8 @@
     "| 😔 | Rio Rancho | NM | [Rio Rancho PD](https://rrnm.gov/17/Police) | 104,026 | They got a [map through ESRI](https://experience.arcgis.com/experience/04301dc448024daf89a1703c048d7c57/)! However, no point data populates. | The map may not be working, but infrastructure could exist 🤞. |\n",
     "| 😔 | Santa Fe | NM | [Santa Fe PD](https://santafenm.gov/police) | 87,505 | None | Report to UCR. |\n",
     "| 😔 | Roswell | NM | [Roswell PD](https://roswell-nm.gov/1262/Police-Department) | 48,422 | None | None | \n",
-    "| 😔 | Philadelphia | PA | [Philadelphia PD](https://www.phillypolice.com/) | 1,587,829 | Made available through OpenDataPhilly, check out [Crime Incidents](https://opendataphilly.org/datasets/crime-incidents/)  | In CSV and SHP format for 2006 to 2023. |\n",
-    "| 😔 | Pittsburgh | PA | please | 302,571 | add | add |\n",
+    "| 🤩 | Philadelphia | PA | [Philadelphia PD](https://www.phillypolice.com/) | 1,587,829 | Made available through OpenDataPhilly, check out [Crime Incidents](https://opendataphilly.org/datasets/crime-incidents/). Even better, they got a [public API](https://cityofphiladelphia.github.io/carto-api-explorer/#incidents_part1_part2) 🔥.  | Flat files in CSV and SHP format for 2006 to 2023. |\n",
+    "| 😔 | Pittsburgh | PA | Pittsburgh PD | 302,571 | They make an interactive crime dashboard available, [here](https://pittsburghpa.gov/publicsafety/crime-data). | Data is presented by neighborhood, not census block or point. Even worse, it's locked into Tableau 🤮. |\n",
     "| 😔 | Allentown | PA | please | 122,827 | add | add |\n",
     "| 😔 | Reading | PA | please | 95,112 | add | add |\n",
     "| 😔 | Erie | PA | please | 94,831 | add | add |\n",
