push overview of cities and PD crime data portals table.

--- a/pd-city-data.ipynb
+++ b/pd-city-data.ipynb
@@ -16,8 +16,8 @@
     "| 😔 | Roswell | NM | [Roswell PD](https://roswell-nm.gov/1262/Police-Department) | 48,422 | None | None | \n",
     "| 🤩 | Philadelphia | PA | [Philadelphia PD](https://www.phillypolice.com/) | 1,587,829 | Made available through OpenDataPhilly, check out [Crime Incidents](https://opendataphilly.org/datasets/crime-incidents/). Even better, they got a [public API](https://cityofphiladelphia.github.io/carto-api-explorer/#incidents_part1_part2) 🔥.  | Flat files in CSV and SHP format for 2006 to 2023. |\n",
     "| 😔 | Pittsburgh | PA | Pittsburgh PD | 302,571 | They make an interactive crime dashboard available, [here](https://pittsburghpa.gov/publicsafety/crime-data). | Data is presented by neighborhood, not census block or point. Even worse, it's locked into Tableau 🤮. |\n",
-    "| 😔 | Allentown | PA | please | 122,827 | add | add |\n",
-    "| 😔 | Reading | PA | please | 95,112 | add | add |\n",
+    "| 😔 | Allentown | PA | [Allentown PD](https://www.allentownpa.gov/police) | 122,827 | None | Nothing noted on their site. |\n",
+    "| 😔 | Reading | PA | [Reading PD](https://www.readingpa.gov/about-rpd) | 95,112 | They make them available through [CrimeMapping.com](https://www.crimemapping.com/map/agency/306). | Can't seem to look before 2022. |\n",
     "| 😔 | Erie | PA | please | 94,831 | add | add |\n",
     "| 😔 | Bridgeport | CT | please | 148,654  | add | add |\n",
     "| 😔 | Stamford | CT | please | 135,470 | add | add | \n",
