just a bit more

--- a/pd-city-data.ipynb
+++ b/pd-city-data.ipynb
@@ -19,7 +19,7 @@
     "| 😔 | Allentown | PA | [Allentown PD](https://www.allentownpa.gov/police) | 122,827 | None | Nothing noted on their site. |\n",
     "| 😔 | Reading | PA | [Reading PD](https://www.readingpa.gov/about-rpd) | 95,112 | They make them available through [crimemapping.com](https://www.crimemapping.com/map/agency/306). | Can't seem to look before 2022. |\n",
     "| 😔 | Erie | PA | [Erie PD](https://epd.erie.pa.us/) | 94,831 | None | None |\n",
-    "| 😔 | Bridgeport | CT | [Bridgeport PD](https://www.bridgeportct.gov/police) | 148,654  | They may have a [GIS team](https://www.bridgeportct.gov/filestorage/341307/341425/341439/371966/Bridgeport_Crime_Map_Jan_Jul_2021.pdf), but no publicly available data. |  |\n",
+    "| 😔 | Bridgeport | CT | [Bridgeport PD](https://www.bridgeportct.gov/police) | 148,654  | They may have a [GIS team](https://www.bridgeportct.gov/filestorage/341307/341425/341439/371966/Bridgeport_Crime_Map_Jan_Jul_2021.pdf), but no publicly available data. | None |\n",
     "| 😔 | Stamford | CT | please | 135,470 | add | add | \n",
     "| 😔 | New Haven | CT | please | 134,023 | add | add |\n",
     "| 😔 | Hartford | CT | please | 121,054 | add | add |\n",
