just a bit more

--- a/pd-city-data.ipynb
+++ b/pd-city-data.ipynb
@@ -25,10 +25,10 @@
     "| 😔 | Hartford | CT | please | 121,054 | add | add |\n",
     "| 😔 | Waterbury | CT | please | 114,403 | add | add |\n",
     "\n",
-    "Potential avenues for securing data:\n",
+    "Potential alternative avenues for securing data:\n",
     " \n",
-    " - Looking at regional reporting efforts (e.g., county ECCs)\n",
-    " - Requesting data from LEAs"
+    " - [ ] Looking at regional reporting efforts (e.g., county ECCs)\n",
+    " - [ ] Requesting data from LEAs"
    ]
   },
   {
