check tthe ucr pa endpoint

--- a/pd-city-data.ipynb
+++ b/pd-city-data.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,6 +712,448 @@
     "hartford = requests.get(\"https://data.hartford.gov/resource/889t-nwfu.json\").json()\n",
     "df_hartford = DataFrame.from_dict(hartford)\n",
     "df_hartford"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pulling from UCR.PA.GOV"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Take a random bounding box for crimes between 12/1/2022 and 5/30/2023:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = requests.get(\n",
+    "    url = \"\thttps://www.ucr.pa.gov/NIBRS.CrimeAnalytics.Service/Silverlight/DataService/GetData/allblocks/Provider/query\",\n",
+    "    params = {\n",
+    "\t\t\t\"f\": \"json\",\n",
+    "\t\t\t\"where\": \"{\\\"offense\\\":\\\"'13A','13C','13B','35B','35A','26B','26A','26C','26D','26E','26F','26G','39A','39C','39B','39D','09C','09A','09B','64A','64B','23A','23B','23C','23D','23E','23F','23G','23H','40B','40A','40C','11D','36A','11A','11C','11B','36B','720','200','90A','510','220','250','90B','290','90C','90D','90E','270','210','90F','100','90G','240','90H','370','120','90I','280','90J','520','90Z'\\\",\\\"xmin\\\":-8633792.643081864,\\\"xmax\\\":-8627768.44978998,\\\"ymin\\\":4829102.608761361,\\\"ymax\\\":4831027.866411345,\\\"fromDate\\\":\\\"\\\\\\\"12/1/2022\\\\\\\"\\\",\\\"toDate\\\":\\\"\\\\\\\"5/30/2023\\\\\\\"\\\"}\",\n",
+    "\t\t\t\"returnGeometry\": \"true\",\n",
+    "\t\t\t\"spatialRel\": \"esriSpatialRelIntersects\",\n",
+    "\t\t\t\"outFields\": \"*\"\n",
+    "\t\t}\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's process the payload and examine the data that we extracted from the endpoint:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>blockNumber</th>\n",
+       "      <th>geoId</th>\n",
+       "      <th>ucr</th>\n",
+       "      <th>offense</th>\n",
+       "      <th>reportedOn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-8.632537e+06</td>\n",
+       "      <td>4.831016e+06</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>420550125012010</td>\n",
+       "      <td>520</td>\n",
+       "      <td>Weapons Law Violations</td>\n",
+       "      <td>12/18/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-8.632518e+06</td>\n",
+       "      <td>4.830980e+06</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>420550125012010</td>\n",
+       "      <td>90Z</td>\n",
+       "      <td>All Other Offenses</td>\n",
+       "      <td>12/18/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-8.628906e+06</td>\n",
+       "      <td>4.830856e+06</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>420550125011013</td>\n",
+       "      <td>35B</td>\n",
+       "      <td>Drug Equipment Violations</td>\n",
+       "      <td>12/8/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-8.629850e+06</td>\n",
+       "      <td>4.829935e+06</td>\n",
+       "      <td>4013</td>\n",
+       "      <td>420550125014013</td>\n",
+       "      <td>90D</td>\n",
+       "      <td>Driving Under the Influence</td>\n",
+       "      <td>12/5/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-8.632838e+06</td>\n",
+       "      <td>4.829189e+06</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>420550125014024</td>\n",
+       "      <td>23D</td>\n",
+       "      <td>Theft From Building</td>\n",
+       "      <td>12/5/2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              x             y blockNumber            geoId  ucr  \\\n",
+       "0 -8.632537e+06  4.831016e+06        2010  420550125012010  520   \n",
+       "1 -8.632518e+06  4.830980e+06        2010  420550125012010  90Z   \n",
+       "2 -8.628906e+06  4.830856e+06        1013  420550125011013  35B   \n",
+       "3 -8.629850e+06  4.829935e+06        4013  420550125014013  90D   \n",
+       "4 -8.632838e+06  4.829189e+06        4024  420550125014024  23D   \n",
+       "\n",
+       "                       offense  reportedOn  \n",
+       "0       Weapons Law Violations  12/18/2022  \n",
+       "1           All Other Offenses  12/18/2022  \n",
+       "2    Drug Equipment Violations   12/8/2022  \n",
+       "3  Driving Under the Influence   12/5/2022  \n",
+       "4          Theft From Building   12/5/2022  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Write a function to extract the wanted features from the payload:\n",
+    "def flatten_features(input: dict) -> list:\n",
+    "    features = []\n",
+    "    for i in input:\n",
+    "        out = {}\n",
+    "        out['x'] = i['geometry']['x']\n",
+    "        out['y'] = i['geometry']['y']\n",
+    "        out['blockNumber'] = i['attributes']['Blocknumber']\n",
+    "        out['geoId'] = i['attributes']['GEOID']\n",
+    "        out['ucr'] = i['attributes']['UCROffenseCode']\n",
+    "        out['offense'] = i['attributes']['OffenseType']\n",
+    "        out['reportedOn'] = i['attributes']['ReportedOn']\n",
+    "\n",
+    "        features.append(out)\n",
+    "\n",
+    "    return(features)\n",
+    "\n",
+    "# Flatten the data:\n",
+    "features = flatten_features(input = res.json()['features'])\n",
+    "\n",
+    "# Transform to DataFrame:\n",
+    "random_pull = DataFrame.from_dict(features)\n",
+    "random_pull\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the `\"where\"` dictionary, we can pass all types of parameters to change the search. For instance the bounding box (`xmin`, `xmax`, `ymin`, and `ymax`) or the time (`fromDate` and `toDate`). For example, let's change the dates to include the period of interest (`1/1/2015` to `12/31/2023`):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = requests.get(\n",
+    "    url = \"\thttps://www.ucr.pa.gov/NIBRS.CrimeAnalytics.Service/Silverlight/DataService/GetData/allblocks/Provider/query\",\n",
+    "    params = {\n",
+    "\t\t\t\"f\": \"json\",\n",
+    "\t\t\t\"where\": \"{\\\"offense\\\":\\\"'13A','13C','13B','35B','35A','26B','26A','26C','26D','26E','26F','26G','39A','39C','39B','39D','09C','09A','09B','64A','64B','23A','23B','23C','23D','23E','23F','23G','23H','40B','40A','40C','11D','36A','11A','11C','11B','36B','720','200','90A','510','220','250','90B','290','90C','90D','90E','270','210','90F','100','90G','240','90H','370','120','90I','280','90J','520','90Z'\\\",\\\"xmin\\\":-8633792.643081864,\\\"xmax\\\":-8627768.44978998,\\\"ymin\\\":4829102.608761361,\\\"ymax\\\":4831027.866411345,\\\"fromDate\\\":\\\"\\\\\\\"1/1/2015\\\\\\\"\\\",\\\"toDate\\\":\\\"\\\\\\\"12/31/2023\\\\\\\"\\\"}\",\n",
+    "\t\t\t\"returnGeometry\": \"true\",\n",
+    "\t\t\t\"spatialRel\": \"esriSpatialRelIntersects\",\n",
+    "\t\t\t\"outFields\": \"*\"\n",
+    "\t\t}\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Process it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>blockNumber</th>\n",
+       "      <th>geoId</th>\n",
+       "      <th>ucr</th>\n",
+       "      <th>offense</th>\n",
+       "      <th>reportedOn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-8.632537e+06</td>\n",
+       "      <td>4.831016e+06</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>420550125012010</td>\n",
+       "      <td>520</td>\n",
+       "      <td>Weapons Law Violations</td>\n",
+       "      <td>12/18/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-8.632518e+06</td>\n",
+       "      <td>4.830980e+06</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>420550125012010</td>\n",
+       "      <td>S</td>\n",
+       "      <td>All Other Offenses</td>\n",
+       "      <td>12/18/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-8.628906e+06</td>\n",
+       "      <td>4.830856e+06</td>\n",
+       "      <td>1013</td>\n",
+       "      <td>420550125011013</td>\n",
+       "      <td>35B</td>\n",
+       "      <td>Drug Equipment Violations</td>\n",
+       "      <td>12/8/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-8.629850e+06</td>\n",
+       "      <td>4.829935e+06</td>\n",
+       "      <td>4013</td>\n",
+       "      <td>420550125014013</td>\n",
+       "      <td>90D</td>\n",
+       "      <td>Driving Under the Influence</td>\n",
+       "      <td>12/5/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-8.632838e+06</td>\n",
+       "      <td>4.829189e+06</td>\n",
+       "      <td>4024</td>\n",
+       "      <td>420550125014024</td>\n",
+       "      <td>23D</td>\n",
+       "      <td>Theft From Building</td>\n",
+       "      <td>12/5/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>134</th>\n",
+       "      <td>-8.629061e+06</td>\n",
+       "      <td>4.830299e+06</td>\n",
+       "      <td>4006</td>\n",
+       "      <td>420550125014006</td>\n",
+       "      <td>11D</td>\n",
+       "      <td>Fondling</td>\n",
+       "      <td>1/1/2020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>-8.632356e+06</td>\n",
+       "      <td>4.829228e+06</td>\n",
+       "      <td>4020</td>\n",
+       "      <td>420550125014020</td>\n",
+       "      <td>13B</td>\n",
+       "      <td>Simple Assault</td>\n",
+       "      <td>10/31/2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>-8.629809e+06</td>\n",
+       "      <td>4.829980e+06</td>\n",
+       "      <td>4002</td>\n",
+       "      <td>420550125014002</td>\n",
+       "      <td>13B</td>\n",
+       "      <td>Simple Assault</td>\n",
+       "      <td>9/15/2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137</th>\n",
+       "      <td>-8.633139e+06</td>\n",
+       "      <td>4.830469e+06</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>420550125012011</td>\n",
+       "      <td>220</td>\n",
+       "      <td>Burglary/Breaking and Entering</td>\n",
+       "      <td>9/2/2019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>138</th>\n",
+       "      <td>-8.630126e+06</td>\n",
+       "      <td>4.829290e+06</td>\n",
+       "      <td>4041</td>\n",
+       "      <td>420550125014041</td>\n",
+       "      <td>23C</td>\n",
+       "      <td>Shoplifting</td>\n",
+       "      <td>8/13/2019</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>139 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                x             y blockNumber            geoId  ucr  \\\n",
+       "0   -8.632537e+06  4.831016e+06        2010  420550125012010  520   \n",
+       "1   -8.632518e+06  4.830980e+06        2010  420550125012010    S   \n",
+       "2   -8.628906e+06  4.830856e+06        1013  420550125011013  35B   \n",
+       "3   -8.629850e+06  4.829935e+06        4013  420550125014013  90D   \n",
+       "4   -8.632838e+06  4.829189e+06        4024  420550125014024  23D   \n",
+       "..            ...           ...         ...              ...  ...   \n",
+       "134 -8.629061e+06  4.830299e+06        4006  420550125014006  11D   \n",
+       "135 -8.632356e+06  4.829228e+06        4020  420550125014020  13B   \n",
+       "136 -8.629809e+06  4.829980e+06        4002  420550125014002  13B   \n",
+       "137 -8.633139e+06  4.830469e+06        2011  420550125012011  220   \n",
+       "138 -8.630126e+06  4.829290e+06        4041  420550125014041  23C   \n",
+       "\n",
+       "                            offense  reportedOn  \n",
+       "0            Weapons Law Violations  12/18/2022  \n",
+       "1                All Other Offenses  12/18/2022  \n",
+       "2         Drug Equipment Violations   12/8/2022  \n",
+       "3       Driving Under the Influence   12/5/2022  \n",
+       "4               Theft From Building   12/5/2022  \n",
+       "..                              ...         ...  \n",
+       "134                        Fondling    1/1/2020  \n",
+       "135                  Simple Assault  10/31/2019  \n",
+       "136                  Simple Assault   9/15/2019  \n",
+       "137  Burglary/Breaking and Entering    9/2/2019  \n",
+       "138                     Shoplifting   8/13/2019  \n",
+       "\n",
+       "[139 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features = flatten_features(input = res.json()['features'])\n",
+    "# Transform to DataFrame:\n",
+    "random_pull = DataFrame.from_dict(features)\n",
+    "random_pull"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It appears that the data does not go past 2019 for this particular bounding box. Let's try a different geography (a square in Philly) for the same time period."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Bounding box for Allentown\n",
+    "#40.5849952,-75.504076\n",
+    "#40.6168179,-75.4673313"
    ]
   }
  ],
