check tthe ucr pa endpoint

--- a/pd-city-data.ipynb
+++ b/pd-city-data.ipynb
@@ -1130,26 +1130,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "res = requests.get(\n",
+    "    url = \"\thttps://www.ucr.pa.gov/NIBRS.CrimeAnalytics.Service/Silverlight/DataService/GetData/allblocks/Provider/query\",\n",
+    "    params = {\n",
+    "\t\t\t\"f\": \"json\",\n",
+    "\t\t\t\"where\": \"{\\\"offense\\\":\\\"'13A','13C','13B','35B','35A','26B','26A','26C','26D','26E','26F','26G','39A','39C','39B','39D','09C','09A','09B','64A','64B','23A','23B','23C','23D','23E','23F','23G','23H','40B','40A','40C','11D','36A','11A','11C','11B','36B','720','200','90A','510','220','250','90B','290','90C','90D','90E','270','210','90F','100','90G','240','90H','370','120','90I','280','90J','520','90Z'\\\",\\\"xmin\\\":-8369308.715361005,\\\"xmax\\\":-8364722.493663773,\\\"ymin\\\":4858518.61961708,\\\"ymax\\\":4859483.637099206,\\\"fromDate\\\":\\\"\\\\\\\"1/1/2015\\\\\\\"\\\",\\\"toDate\\\":\\\"\\\\\\\"12/31/2023\\\\\\\"\\\"}\",\n",
+    "\t\t\t\"returnGeometry\": \"true\",\n",
+    "\t\t\t\"spatialRel\": \"esriSpatialRelIntersects\",\n",
+    "\t\t\t\"outFields\": \"*\"\n",
+    "\t\t}\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspect the number of features returned:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1001"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "len(res.json()['features'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It appears that the payload is 1001, which seems oddly small. It may be possible that the endpoint is limited to a certain number of return..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>blockNumber</th>\n",
+       "      <th>geoId</th>\n",
+       "      <th>ucr</th>\n",
+       "      <th>offense</th>\n",
+       "      <th>reportedOn</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-8.366735e+06</td>\n",
+       "      <td>4.859106e+06</td>\n",
+       "      <td>4007</td>\n",
+       "      <td>421010005004007</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Robbery</td>\n",
+       "      <td>12/31/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-8.367749e+06</td>\n",
+       "      <td>4.858893e+06</td>\n",
+       "      <td>3002</td>\n",
+       "      <td>421010007013002</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Shoplifting</td>\n",
+       "      <td>12/31/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-8.367011e+06</td>\n",
+       "      <td>4.859228e+06</td>\n",
+       "      <td>1002</td>\n",
+       "      <td>421010005001002</td>\n",
+       "      <td>23G</td>\n",
+       "      <td>Theft From Motor Vehicle Parts/Accessories</td>\n",
+       "      <td>12/30/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-8.366010e+06</td>\n",
+       "      <td>4.859138e+06</td>\n",
+       "      <td>4001</td>\n",
+       "      <td>421010005004001</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Theft From Building</td>\n",
+       "      <td>12/30/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-8.366535e+06</td>\n",
+       "      <td>4.859225e+06</td>\n",
+       "      <td>4005</td>\n",
+       "      <td>421010005004005</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Pocket-picking</td>\n",
+       "      <td>12/30/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>-8.364985e+06</td>\n",
+       "      <td>4.858543e+06</td>\n",
+       "      <td>5010</td>\n",
+       "      <td>421010001015010</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Shoplifting</td>\n",
+       "      <td>11/1/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>-8.366933e+06</td>\n",
+       "      <td>4.858985e+06</td>\n",
+       "      <td>1008</td>\n",
+       "      <td>421010005001008</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Robbery</td>\n",
+       "      <td>11/1/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>-8.366352e+06</td>\n",
+       "      <td>4.858666e+06</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>421010006002002</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Robbery</td>\n",
+       "      <td>11/1/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>-8.365050e+06</td>\n",
+       "      <td>4.858554e+06</td>\n",
+       "      <td>4014</td>\n",
+       "      <td>421010001014014</td>\n",
+       "      <td>210</td>\n",
+       "      <td>Extortion/Blackmail</td>\n",
+       "      <td>11/1/2022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>-8.368702e+06</td>\n",
+       "      <td>4.858820e+06</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>421010008031000</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Credit Card/Automatic Teller Machine Fraud</td>\n",
+       "      <td>11/1/2022</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1001 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 x             y blockNumber            geoId  ucr  \\\n",
+       "0    -8.366735e+06  4.859106e+06        4007  421010005004007    S   \n",
+       "1    -8.367749e+06  4.858893e+06        3002  421010007013002    S   \n",
+       "2    -8.367011e+06  4.859228e+06        1002  421010005001002  23G   \n",
+       "3    -8.366010e+06  4.859138e+06        4001  421010005004001    S   \n",
+       "4    -8.366535e+06  4.859225e+06        4005  421010005004005    S   \n",
+       "...            ...           ...         ...              ...  ...   \n",
+       "996  -8.364985e+06  4.858543e+06        5010  421010001015010    S   \n",
+       "997  -8.366933e+06  4.858985e+06        1008  421010005001008    S   \n",
+       "998  -8.366352e+06  4.858666e+06        2002  421010006002002    S   \n",
+       "999  -8.365050e+06  4.858554e+06        4014  421010001014014  210   \n",
+       "1000 -8.368702e+06  4.858820e+06        1000  421010008031000    S   \n",
+       "\n",
+       "                                         offense  reportedOn  \n",
+       "0                                        Robbery  12/31/2022  \n",
+       "1                                    Shoplifting  12/31/2022  \n",
+       "2     Theft From Motor Vehicle Parts/Accessories  12/30/2022  \n",
+       "3                            Theft From Building  12/30/2022  \n",
+       "4                                 Pocket-picking  12/30/2022  \n",
+       "...                                          ...         ...  \n",
+       "996                                  Shoplifting   11/1/2022  \n",
+       "997                                      Robbery   11/1/2022  \n",
+       "998                                      Robbery   11/1/2022  \n",
+       "999                          Extortion/Blackmail   11/1/2022  \n",
+       "1000  Credit Card/Automatic Teller Machine Fraud   11/1/2022  \n",
+       "\n",
+       "[1001 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features = flatten_features(input = res.json()['features'])\n",
+    "# Transform to DataFrame:\n",
+    "random_pull = DataFrame.from_dict(features)\n",
+    "random_pull"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion: While this method might work in smaller cities (e.g., Allentown) we may have to refine the query parameters to either (1) expand the number of returns or (2) narrow down the query parameters in order to remain below the threshold. Either method would prove to be a pain."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Bounding box for Allentown\n",
     "#40.5849952,-75.504076\n",
